# slack-tabulate-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  prompt.md  pyproject.toml
backup/: handlers.py  table_formatter.py
src/main/tablebeautifier/bot/: app.py  handlers.py  run_dev.py
src/main/tablebeautifier/utils/: table_formatter.py
src/main/tabulate/bot/: app.py  run_dev.py
src/main/tabulate/utils/: table_formatter.py
src/tabulate/bot/: app.py  handlers.py  run_dev.py
src/tabulate/utils/: table_formatter.py
tests/: test_non_csv_detection.py  test_table_formatter.py
